--- a/app.json
+++ b/app.json
@@ -10,6 +10,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      "react-native-vision-camera"
+    ],
     "updates": {
       "fallbackToCacheTimeout": 0
     },
