--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "invoicesplitter",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -17,12 +16,15 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "^44.0.6",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.2",
+    "pod-install": "^0.1.35",
+    "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-vision-camera": "^2.13.2",
     "react-native-web": "0.17.1",
     "react-native-woodpicker": "^0.3.14"
   },
@@ -31,6 +33,9 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "~17.0.21"
   },
   "private": true
 }
