--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/cli-platform-android": "^7.0.1",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -24,7 +25,7 @@
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-vision-camera": "^2.13.2",
+    "react-native-vision-camera": "2.13.0",
     "react-native-web": "0.17.1",
     "react-native-woodpicker": "^0.3.14"
   },
